Revert "добавил введение и библиографию"
This reverts commit 4db8c90d38e260817ac825f2ab9ba1a0cae32018.

--- a/biblio/author.bib
+++ b/biblio/author.bib
@@ -1,147 +1,92 @@
-@conference{poliyev2015pca,
-  title = {Получение оптимального эталона с помощью метода главных компонент},
-  author = {Полиев, Александр Владимирович and Корсун, Олег Николаевич},
-  booktitle = {Всероссийская научно-техническая конференция <<Научные чтения по авиации, посвящённые памяти Н.Е. Жуковского>>},
-  number = {3},
-  pages = {455--459},
+@inproceedings{confbib1,
+  author = {Фамилия, И. О.},
+  title = {название тезисов конференции},
+  booktitle = {Название сборника},
   year = {2015},
-  organization = {Общество с ограниченной ответственностью <<Экспериментальная мастерская НаукаСофт>>},
   language = {russian},
+  authorconf = {true},
 }
 
-@conference{poliyev2015split,
-  title = {Алгоритм разбиения слов на однородные части в интересах разработки речевого интерфейса бортового оборудования},
-  author = {Полиев, Александр Владимирович and Корсун, Олег Николаевич},
-  booktitle = {Восьмой Международный Аэрокосмический Конгресс IAC'15},
-  pages = {178--180},
+@CONFERENCE{confbib2,
+  author = {Фамилия, И. О.},
+  title = {название тезисов конференции},
+  booktitle = {Название сборника},
   year = {2015},
-  organization = {АИР},
   language = {russian},
+  authorconf = {true},
 }
 
-@conference{poliyev2016dynamic,
-  title = {Разработка модифицированного алгоритма динамического программирования для разбиения слов на однородные части},
-  author = {Полиев, Александр Владимирович and Корсун, Олег Николаевич},
-  booktitle = {Всероссийская научно-техническая конференция <<Научные чтения по авиации, посвящённые памяти Н.Е. Жуковского>>},
-  number = {4},
-  pages = {194--201},
-  year = {2016},
-  organization = {Общество с ограниченной ответственностью <<Экспериментальная мастерская НаукаСофт>>},
+@ARTICLE{bib1,
+  author = {Фамилия, И. О.},
+  title = {Название статьи},
+  journal = {Журнал},
+  year = {2012},
+  volume = {1},
+  pages = {100},
   language = {russian},
+  authorother = {true},
+  authorconf = {true},
 }
 
-@conference{poliyev2016split,
-  title = {Определение оптимального разбиения слова на однородные участки на основе матрицы корреляционного портрета},
-  author = {Полиев, Александр Владимирович and Корсун, Олег Николаевич},
-  booktitle = {Юбилейная Всероссийская научно-техническая конференция <<Авиационные системы в XXI веке>>},
-  pages = {162},
-  year = {2016},
-  organization = {Государственный научно-исследовательский институт авиационных систем},
+@CONFERENCE{bib2,
+  author = {Фамилия, И. О.},
+  title = {название тезисов конференции},
+  booktitle = {Название сборника},
+  year = {2012},
   language = {russian},
+  authorconf = {true},
 }
 
-@conference{poliyev2016natural,
-  title = {Разработка метода анализа фонетически однородных частей слов естественного языка},
-  author = {Полиев, Александр Владимирович and Корсун, Олег Николаевич},
-  booktitle = {Вторая Международная научно-практическая конференция <<Эрго-2016: Человеческий фактор в сложных технических системах и средах>>},
-  pages = {370--377},
-  year = {2016},
-  organization = {Межрегиональная эргономическая ассоциация},
-  language = {russian},
-}
-
-@conference{poliyev2016pca,
-  title = {The algorithm of an optimal word pattern synthesis using principal component analysis},
-  author = {Poliyev, Alexander Vladimirovich},
-  booktitle = {Workshop on Contemporary materials and technologies in the aviation industry - CMTAI},
-  year = {2016},
-  language = {english},
-}
-
-@conference{poliyev2017split,
-  title = {Определение границ однородных участков слова на основе матрицы корреляционного портрета},
-  author = {Полиев, Александр Владимирович},
-  booktitle = {Юбилейная Всероссийская научно-техническая конференция <<Авиационные системы в XXI веке>>},
-  pages = {368--375},
-  year = {2017},
-  organization = {Государственный научно-исследовательский институт авиационных систем},
-  language = {russian},
-}
-
-@conference{poliyev2017bayes,
-  title = {Применение формулы Байеса для распознавания слов с использованием нескольких эталонов},
-  author = {Полиев, Александр Владимирович and Корсун, Олег Николаевич},
-  booktitle = {Всероссийская научно-техническая конференция «Навигация, наведение и управление летательными аппаратами»},
-  pages = {114--116},
-  year = {2017},
-  organization = {Издательство <<Научтехлитиздат>>},
-  language = {russian},
-}
-
-@conference{poliyev2018cnn,
-	title = {Разработка алгоритма распознавания слов в условиях шума на основе сверточных нейронных сетей},
-  author = {Полиев, Александр Владимирович and Корсун, Олег Николаевич},
-	booktitle = {Девятый Международный Аэрокосмический Конгресс IAC'18},
-	pages = {124--126},
-	year = {2018},
-	organization = {АИР},
-	language = {russian},
-}
-
-@conference{poliyev2018cnn2,
-  title = {Распознавание речевых команд на основе сверточных нейронных сетей},
-  author = {Полиев, Александр Владимирович and Корсун, Олег Николаевич},
-  booktitle = {III Всероссийская научно-техническая конференция <<Моделирование авиационных систем>>},
-  pages = {261},
+@ARTICLE{scbib1,
+  author = {Фамилия, И. О. and Фамилия2, И. О. and Фамилия3, И. О.},
+  title = {Название статьи},
+  journal = {Журнал},
   year = {2018},
-  organization = {Государственный научно-исследовательский институт авиационных систем},
-  language = {russian},
-}
-
-@inproceedings{korsun2018optimal,
-  title = {Optimal pattern synthesis for speech recognition based on principal component analysis},
-  author = {Poliyev, Alexander Vladimirovich and Korsun, Oleg Nikolavich},
-  booktitle = {IOP Conference Series: Materials Science and Engineering},
-  volume = {312},
+  volume = {2},
   number = {1},
-  pages = {12--14},
-  year = {2018},
-  organization = {IOP Publishing},
-  language = {english},
-}
-
-@article{korsun2016automatic,
-  title = {Автоматическое выделение фонетически однородных участков в словах естественного языка на основе многопараметрической оптимизации},
-  author = {Полиев, Александр Владимирович and Корсун, Олег Николаевич},
-  journal = {Известия Российской академии наук. Теория и системы управления},
-  number = {4},
-  pages = {115--124},
-  year = {2016},
-  publisher = {Федеральное государственное унитарное предприятие Академический научно-издательский, производственно-полиграфический и книгораспространительский центр Наука},
+  pages = {99--102},
   language = {russian},
+  authorscopus = {true},
+  authorwos = {true},
+  addendum = {(Scopus, WoS)},
 }
 
-@article{poliyev2017pca,
-  title = {Разработка алгоритма синтеза оптимальных эталонов на основе метода главных компонент},
-  author = {Полиев, Александр Владимирович},
-  journal = {Cloud of science},
-  volume = {4},
-  number = {4},
-  pages = {650--661},
-  year = {2017},
-  publisher = {Негосударственное образовательное учреждение высшего образования Московский технологический институт},
+@ARTICLE{vakbib1,
+  author = {Фамилия, И. О. and Фамилия2, И. О. and Фамилия3, И. О.},
+  addendum = {(0,28~п.~л.; ВАК, WoS)},
+  title = {Название статьи},
+  journal = {Журнал},
+  year = {2013},
+  volume = {1},
+  number = {5},
+  pages = {100--120},
   language = {russian},
+  authorvak = {true},
+  authorwos = {true},
 }
 
-@article{korsun2018usage,
-  title = {Использование нескольких эталонов при распознавании речи: формула Байеса и метод комитетов},
-  author = {Полиев, Александр Владимирович and Корсун, Олег Николаевич},
-  journal = {Вестник компьютерных и информационных технологий},
-  volume = {163},
-  number = {1},
-  pages = {14--23},
-  year = {2018},
-  publisher = {Издательский дом <<Спектр>>},
+@ARTICLE{vakbib2,
+  author = {Фамилия, И. О. and Фамилия2, И. О. and Фамилия3, И. О. and Фамилия4, И. О.},
+  addendum = {(0,33~п.~л.~/ 0,28~п.~л.; ВАК)},
+  title = {Название статьи},
+  journal = {Журнал},
+  year = {2014},
+  volume = {1},
+  number = {5},
+  pages = {100--120},
   language = {russian},
+  authorvak = {true},
 }
 
+@ARTICLE{wosbib1,
+  author = {Фамилия, И. О. and Фамилия2, И. О. and Фамилия3, И. О.},
+  addendum = {(0,21~п.~л., WoS)},
+  title = {Название статьи},
+  journal = {Журнал},
+  year = {2011},
+  volume = {1},
+  number = {8},
+  pages = {105--120},
+  language = {russian},
+  authorwos = {true},
+}
