--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -1,155 +1,187 @@
-\textbf{Актуальность темы.}
-На сегодняшний день взаимодействие человека с компьютерными системами через управление речевыми командами является одним из самых удобных и перспективных форматов.
 
-% версия для автореферата
-%Первая попытка конструирования системы автоматического распознавания речи была сделана в 1952 году, а уже в 1970-е годы исследования в области распознавания речи достигли значительных успехов.
-%До настоящего времени распознавание речи совершенствовалось, а словарь распознаваемых слов вырос до нескольких десятков тысяч.
-%Применение быстрых методов декодирования позволило производить распознавание в реальном времени.
+{\actuality} Обзор, введение в тему, обозначение места данной работы в
+мировых исследованиях и~т.\:п., можно использовать ссылки на~другие
+работы~\autocite{Gosele1999161}
+(если их~нет, то~в~автореферате
+автоматически пропадёт раздел <<Список литературы>>). Внимание! Ссылки
+на~другие работы в~разделе общей характеристики работы можно
+использовать только при использовании \verb!biblatex! (из-за технических
+ограничений \verb!bibtex8!. Это связано с тем, что одна
+и~та~же~характеристика используются и~в~тексте диссертации, и в
+автореферате. В~последнем, согласно ГОСТ, должен присутствовать список
+работ автора по~теме диссертации, а~\verb!bibtex8! не~умеет выводить в одном
+файле два списка литературы).
+При использовании \verb!biblatex! возможно использование исключительно
+в~автореферате подстрочных ссылок
+для других работ командой \verb!\autocite!, а~также цитирование
+собственных работ командой \verb!\cite!. Для этого в~файле
+\verb!common/setup.tex! необходимо присвоить положительное значение
+счётчику \verb!\setcounter{usefootcite}{1}!.
 
-% версия для диссертации
-Первая попытка конструирования системы автоматического распознавания речи была сделана в 1952 году в Bell Laboratories, США~\cite{davis1952automatic}.
-Система с хорошим уровнем точности распознавала цифры от нуля до девяти, произнесённые диктором через телефонный автомат.
-Значительные улучшения качества в области распознавания речи были достигнуты в 70-ых годах.
-В то время технологии автоматического распознавания отдельных команд основывалась на работах Itakura в США~\cite{itakura1975minimum}, Sakoe и Chiba в Японии~\cite{sakoe1978dynamic} и Величкина и Загоруйка в СССР~\cite{velichko1970automatic}.
-Советские учёные производили улучшения методов распознавания с помощью эталона.
-Применение подхода динамического программирования было отличительной особенностью японского исследования.
-Работа Itakura раскрыла метод кодирования линейного предсказания (Linear Predictive Coding, LPC), который успешно использовался в распознавании сигналов с низким битрейтом (количество битов информации, передаваемых в секунду).
-В AT\&T Bell Laboratories были построены распознающие системы, обработка акустического сигнала в которых была основана на LPC анализе, а процесс распознавания проходил с использованием метода динамической трансформации времени (Dynamic Time Warping, DTW).
-В 1980-х годах от подходов, основанных на применении эталонов, научные работы в области распознавания речи перешли к моделированию статистическими методами.
-Использовались скрытые модели Маркова (Hidden Markov Models, HMM).
-Работы Бейкера~\cite{baker1990stochastic} были одними из первых, в которых для решения задачи распознавания речи были применены HMM.
-С 1990-х годов распознавание речи несколько усовершенствовалось.
-Словарь распознаваемых слов вырос до нескольких десятков тысяч.
-Использование быстрых методов декодирования позволило производить распознавание в реальном времени.
-В современных дикторозависимых системах, распознающих отдельные слова, количество которых достигает двадцати тысяч слов, ошибки составляют менее 0.1~\%~\cite{das1993influence}.
-И около 5~\% ошибок в независимых от диктора системах, которые распознают слитную речь из тысячи слов~\cite{aubert1993continuous}.
+Для генерации содержимого титульного листа автореферата, диссертации
+и~презентации используются данные из файла \verb!common/data.tex!. Если,
+например, вы меняете название диссертации, то оно автоматически
+появится в~итоговых файлах после очередного запуска \LaTeX. Согласно
+ГОСТ 7.0.11-2011 <<5.1.1 Титульный лист является первой страницей
+диссертации, служит источником информации, необходимой для обработки и
+поиска документа>>. Наличие логотипа организации на~титульном листе
+упрощает обработку и~поиск, для этого разметите логотип вашей
+организации в папке images в~формате PDF (лучше найти его в векторном
+варианте, чтобы он хорошо смотрелся при печати) под именем
+\verb!logo.pdf!. Настроить размер изображения с логотипом можно
+в~соответствующих местах файлов \verb!title.tex!  отдельно для
+диссертации и автореферата. Если вам логотип не~нужен, то просто
+удалите файл с~логотипом.
 
-В современных системах применяются 3 основные группы методов распознавания речи.
-Первая группа --- это скрытые марковские модели.
-В них входная речь рассматривается как последовательность фонем с определёнными вероятностями перехода.
-Распознавание производится через поиск наиболее вероятной последовательности фонем для данного входного сигнала.
-Вторая --- это методы, основанные на сравнении с эталоном.
-Для каждого слова из словаря некоторым образом составляется эталон.
-При распознавании выбирается то слово, эталон которого наиболее близок к входному сигналу.
-Третья группа методов основана на искусственных нейронных сетях.
-Суть методов состоит в нахождении такой решающей функции, которая по входному сигналу может определить его принадлежность к определённому классу.
-Искусственные нейронные сети построены по принципу организации биологических нейронных сетей и хорошо справляются с широким спектром задач.
+\ifsynopsis
+Этот абзац появляется только в~автореферате.
+Для формирования блоков, которые будут обрабатываться только в~автореферате,
+заведена проверка условия \verb!\!\verb!ifsynopsis!.
+Значение условия задаётся в~основном файле документа (\verb!synopsis.tex! для
+автореферата).
+\else
+Этот абзац появляется только в~диссертации.
+Через проверку условия \verb!\!\verb!ifsynopsis!, задаваемого в~основном файле
+документа (\verb!dissertation.tex! для диссертации), можно сделать новую
+команду, обеспечивающую появление цитаты в~диссертации, но~не~в~автореферате.
+\fi
 
-В данной работе решается задача повышения вероятности правильных распознаваний и снижения влияния акустических шумов путём разработки и совершенствования алгоритмов распознавания команд речевого интерфейса пилота для управления бортовым оборудованием современных самолётов.
-По сравнению с обычной задачей распознания речи к речевому интерфейсу кабины пилота предъявляются следующие требования:
+% {\progress}
+% Этот раздел должен быть отдельным структурным элементом по
+% ГОСТ, но он, как правило, включается в описание актуальности
+% темы. Нужен он отдельным структурынм элемементом или нет ---
+% смотрите другие диссертации вашего совета, скорее всего не нужен.
 
-\begin{itemize}
-	\item распознавание ограниченного словаря из слов или фраз;
-	\item компактность, автономность, высокое быстродействие;
-	\item хорошее качество распознавания в условиях сильного шума.
-\end{itemize}
+{\aim} данной работы является \ldots
 
-С учётом этих требований широко используемые скрытые марковские модели не подходят из-за низкого качества распознавания в условиях шума \cite{korsun2013experimental}.
-Остальные две группы методов в настоящий момент не обеспечивают необходимой надёжности распознавания.
-По этой причине тема настоящей работы, направленной на совершенствование методов распознавания речевых команд с помощью сравнения с эталоном и с использованием нейронных сетей, является актуальной.
-Исследования, выполненные в рамках данной работы, направлены на решение таких практически значимых и актуальных задач, как предобработка входящего сигнала путём выделения однородных частей, улучшение качества эталонов с помощью выделения в них главных компонент и использование систем распознавания из нескольких эталонов.
-В работе также проведено обширное экспериментальное исследование всех разработанных методов на различных наборах входных данных с несколькими уровнями шума.
-
-\textbf{Объект и предмет исследования.}
-В работе в качестве объекта исследования рассматриваются речевые команды, а предметами исследования являются методы и алгоритмы распознавания речевых команд.
-
-\textbf{Целью} работы является повышение вероятности правильных распознаваний и снижение влияния акустических шумов, путём разработки алгоритмического обеспечения для распознавания команд речевого интерфейса кабины пилота в виде отдельных слов и фраз.
-За рамками работы остались выбор оптимального состава команд и их интерпретация.
-
-Для достижения поставленной цели решаются следующие научно-технические задачи:
-\begin{itemize}
-	\item анализ статистических свойств речевых команд и их нормализация;
-	\item разработка алгоритмов предварительного разбиения записей на однородные части;
-	\item разработка алгоритмов исключения шума и выделения наиболее значимых компонент в эталоне;
-	\item исследование статистических закономерностей верного и неверного распознавания речевых команд и их использование для уменьшения количества ошибок;
-	\item разработка алгоритмов использования нескольких эталонов одного слова для улучшения качества распознавания;
-	\item исследование современных типов и архитектур искусственных нейронных сетей глубокого обучения для применения в задаче распознавания речевых команд.
-\end{itemize}
-
-\textbf{Методология и методы исследования.}
-Основными методами исследования, используемыми в работе, являются: анализ данных, цифровая обработка сигналов, теория вероятностей, математическая статистика, численная оптимизация, проектирование программных средств.
-
-\textbf{Научная новизна} заключается в разработке совокупности алгоритмов, обеспечивающих повышение вероятности правильных распознаваний команд речевого интерфейса кабины пилота:
-\begin{itemize}
-	\item алгоритм разбиения речевых команд на фонетически однородные части на основе модифицированного метода динамического программирования;
-	\item алгоритм оптимизации эталонов на основе метода главных компонент;
-	\item алгоритм оптимизации размерности параметрических портретов с использованием полиномов Чебышёва;
-	\item алгоритм распознавания команд по нескольким эталонам с использование байесовского подхода и метода комитетов;
-	\item алгоритм распознавания команд свёрточными нейронными сетями, способных обучаться на выборках малого размера.
-\end{itemize}
-
-\textbf{Практическая значимость.}
-Полученная в результате работы совокупность алгоритмов обеспечивает высокую точность распознавания речевых команд при различных уровнях шума, в том числе с учётом случая статически неустойчивого самолёта.
-Результаты работы могут быть применены в учебном процессе и в ходе разработки алгоритмического обеспечения речевого интерфейса пилота для таких задач, как отображение информации, выбор частоты радиооборудования, прокладка маршрута, управление системой опознавания и датчиками, запрос запаса топлива.
-
-\textbf{Положения, выносимые на защиту:}
-\begin{enumerate}[label={\arabic*)}]
-	\item Разработан алгоритм разбиения речевых команд на фонетически однородные части, отличающийся от существующих применением модифицированного метода динамического программирования.
-	\item Разработан алгоритм оптимизации эталонов, отличающийся от существующих тем, что искомый эталон формируется как линейная комбинация главных компонент, оптимизирующая заданный критерий качества.
-	\item Разработан алгоритм оптимизации размерности параметрических портретов, отличающийся выделением наиболее значимых составляющих с использованием полиномов Чебышёва.
-	\item Разработан алгоритм распознавания команд по нескольким эталонам, отличающийся применением последовательного оценивания с расчётом апостериорных байесовских вероятностей.
-	\item Разработан алгоритм распознавания команд свёрточными нейронными сетями глубокого обучения, отличающийся от существующих обучением на выборке малого размера.
+Для~достижения поставленной цели необходимо было решить следующие {\tasks}:
+\begin{enumerate}
+  \item Исследовать, разработать, вычислить и~т.\:д. и~т.\:п.
+  \item Исследовать, разработать, вычислить и~т.\:д. и~т.\:п.
+  \item Исследовать, разработать, вычислить и~т.\:д. и~т.\:п.
+  \item Исследовать, разработать, вычислить и~т.\:д. и~т.\:п.
 \end{enumerate}
 
-\textbf{Достоверность результатов} обеспечивается корректным применением математической статистики, методов идентификации и анализа данных, подтверждением полученных теоретических результатов с помощью экспериментов, а также сравнением с известными результатами, ранее полученными другими авторами.
 
-% версия для автореферата
-%\textbf{Апробация работы.}
-%Основные результаты исследования докладывались на следующих конференциях:
-%\begin{enumerate}[label={\arabic*)}]
-%	\item Доклад <<Получение оптимального эталона с помощью метода главных компонент>> на Всероссийской научно-технической конференции <<XII Научные чтения по авиации, посвящённые памяти Н.Е. Жуковского>> (Москва, 2015) \cite{poliyev2015pca}.
-%	\item Доклад <<Алгоритм разбиения слов на однородные части в интересах разработки речевого интерфейса бортового оборудования>> на Восьмом Международном Аэрокосмическом Конгрессе IAC'15 (Москва, 2015) \cite{poliyev2015split}.
-%	\item Доклад <<Разработка модифицированного алгоритма динамического программирования для разбиения слов на однородные части>> на Всероссийской научно-технической конференции <<XIII Научные чтения по авиации, посвящённые памяти Н.Е. Жуковского>> (Москва, 2016) \cite{poliyev2016dynamic}.
-%	\item Доклад <<Определение оптимального разбиения слова на однородные участки на основе матрицы корреляционного портрета>> на Юбилейной Всероссийской научно-технической конференции <<Авиационные системы в XXI веке>> (Москва, 2016) \cite{poliyev2016split, poliyev2017split}.
-%	\item Доклад <<Разработка метода анализа фонетически однородных частей слов естественного языка>> на Второй Международной научно-практической конференции <<Эрго-2016: Человеческий фактор в сложных технических системах и средах>> (Санкт-Петербург, 2016) \cite{poliyev2016natural}.
-%	\item Доклад <<The algorithm of an optimal word pattern synthesis using principal component analysis>> на международном семинаре Workshop on Contemporary Materials and Technologies in the Aviation Industry --- CMTAI (Москва, 2016) \cite{poliyev2016pca}.
-%	\item Доклад <<Применение формулы Байеса для распознавания слов с использованием нескольких эталонов>> на Всероссийской научно-технической конференции <<Навигация, наведение и управление летательными аппаратами>> (Москва, 2017) \cite{poliyev2017bayes}.
-%	\item Доклад <<Разработка алгоритма распознавания слов в условиях шума на основе свёрточных нейронных сетей>> на Девятом Международном Аэрокосмическом Конгрессе IAC'18 (Москва, 2018) \cite{poliyev2018cnn}.
-%	\item Доклад <<Распознавание речевых команд на основе свёрточных нейронных сетей>> на Всероссийской научно-технической конференции <<Моделирование авиационных систем>> (Москва, 2018) \cite{poliyev2018cnn2}.
-%\end{enumerate}
-%
-%\textbf{Публикации.}
-%По теме диссертации автором опубликовано 4 научных работы \cite{korsun2016automatic,poliyev2017pca,korsun2018usage,korsun2018optimal}: 3 из них в изданиях из списка, рекомендованного ВАК РФ \cite{korsun2016automatic,poliyev2017pca,korsun2018usage}, и 2 из них в изданиях, входящих в базу Scopus и базу Web of Science \cite{korsun2016automatic,korsun2018optimal}.
-
-% версия для диссертации
-\textbf{Апробация работы.}
-Основные результаты исследования докладывались на следующих конференциях:
-\begin{enumerate}[label={\arabic*)}]
-	\item Доклад на Всероссийской научно-технической конференции <<XII Научные чтения по авиации посвящённые памяти Н.Е. Жуковского>> (Москва, 17 апреля 2015 года).
-	Тема доклада: <<Получение оптимального эталона с помощью метода главных компонент>>.
-	Текст доклада напечатан в сборнике докладов конференции \cite{poliyev2015pca}.
-	\item Доклад на Восьмом Международном Аэрокосмическом Конгрессе IAC'15 (Москва, 28--31 августа 2015 года).
-	Тема доклада: <<Алгоритм разбиения слов на однородные части в интересах разработки речевого интерфейса бортового оборудования>>.
-	Текст доклада напечатан в сборнике докладов конференции \cite{poliyev2015split}.
-	\item Доклад на Всероссийской научно-технической конференции <<XIII Научные чтения по авиации посвящённые памяти Н.Е. Жуковского>> (Москва, 14 апреля 2016 года).
-	Тема доклада: <<Разработка модифицированного алгоритма динамического программирования для разбиения слов на однородные части>>.
-	Текст доклада напечатан в сборнике докладов конференции \cite{poliyev2016dynamic}.
-	\item Доклад на Юбилейной Всероссийской научно-технической конференции <<Авиационные системы в XXI веке>> (Москва, 26 мая 2016 года).
-	Тема доклада: <<Определение оптимального разбиения слова на однородные участки на основе матрицы корреляционного портрета>>.
-	Текст доклада напечатан в сборнике докладов конференции \cite{poliyev2016split, poliyev2017split}.
-	\item Доклад на Второй Международной научно-практической конференции <<Эрго-2016: Человеческий фактор в сложных технических системах и средах>> (Санкт-Петербург, 6--9 июля 2016 года).
-	Тема доклада: <<Разработка метода анализа фонетически однородных частей слов естественного языка>>.
-	Текст доклада напечатан в сборнике докладов конференции \cite{poliyev2016natural}.
-	\item Доклад на международном семинаре Workshop on Contemporary Materials and Technologies in the Aviation Industry --- CMTAI (Москва, 15--16 декабря 2016 года).
-	Тема доклада: <<The algorithm of an optimal word pattern synthesis using principal component analysis>>.
-	Текст доклада напечатан в сборнике докладов конференции \cite{poliyev2016pca}.
-	\item Доклад на Всероссийской научно-технической конференции <<Навигация, наведение и управление летательными аппаратами>> (Москва, 21--22 сентября 2017 года).
-	Тема доклада: <<Применение формулы Байеса для распознавания слов с использованием нескольких эталонов>>.
-	Текст доклада напечатан в сборнике докладов конференции \cite{poliyev2017bayes}.
-	\item Доклад на Девятом Международном Аэрокосмическом Конгрессе IAC'18 (Москва, 28--31 августа 2018 года).
-	Тема доклада: <<Разработка алгоритма распознавания слов в условиях шума на основе свёрточных нейронных сетей>>.
-	Текст доклада напечатан в сборнике докладов конференции \cite{poliyev2018cnn}.
-	\item Доклад на Всероссийской научно-технической конференции <<Моделирование авиационных систем>> (Москва, 21--22 ноября 2018 года).
-	Тема доклада: <<Распознавание речевых команд на основе свёрточных нейронных сетей>>.
-	Текст доклада напечатан в сборнике докладов конференции \cite{poliyev2018cnn2}.
+{\novelty}
+\begin{enumerate}
+  \item Впервые \ldots
+  \item Впервые \ldots
+  \item Было выполнено оригинальное исследование \ldots
 \end{enumerate}
 
-\textbf{Публикации.}
-По теме диссертации автором опубликовано 4 научных работы \cite{korsun2016automatic,poliyev2017pca,korsun2018usage,korsun2018optimal}: 3 из них в изданиях из списка, рекомендованного ВАК РФ \cite{korsun2016automatic,poliyev2017pca,korsun2018usage}, и 2 из них в изданиях, входящих в базу Scopus и базу Web of Science \cite{korsun2016automatic,korsun2018optimal}.
-\begin{enumerate}[label={\arabic*)}]
-	\item Статья <<Автоматическое выделение фонетически однородных участков в словах естественного языка на основе многопараметрической оптимизации>> в журнале <<Известия Российской академии наук. Теория и системы управления>>, 2016 год, № 4, страницы 145–-154 \cite{korsun2016automatic}.
-	\item Статья <<Разработка алгоритма синтеза оптимальных эталонов на основе метода главных компонент>> в журнале <<Cloud of science>>, 2017 год, № 4, страницы 650--661 \cite{poliyev2017pca}.
-	\item Статья <<Использование нескольких эталонов при распознавании речи: формула Байеса и метод комитетов>> в журнале <<Вестник компьютерных и информационных технологий>>, 2018 год, № 1, страницы 14--23 \cite{korsun2018usage}.
-	\item Статья <<Optimal pattern synthesis for speech recognition based on principal component analysis>> в журнале <<IOP Conference Series: Materials Science and Engineering>>, 2018 год, № 312, страницы 12--14 \cite{korsun2018optimal}.
-\end{enumerate}
+{\influence} \ldots
 
+{\methods} \ldots
+
+{\defpositions}
+\begin{enumerate}
+  \item Первое положение
+  \item Второе положение
+  \item Третье положение
+  \item Четвертое положение
+\end{enumerate}
+В папке Documents можно ознакомиться в решением совета из Томского ГУ
+в~файле \verb+Def_positions.pdf+, где обоснованно даются рекомендации
+по~формулировкам защищаемых положений.
+
+{\reliability} полученных результатов обеспечивается \ldots \ Результаты находятся в соответствии с результатами, полученными другими авторами.
+
+
+{\probation}
+Основные результаты работы докладывались~на:
+перечисление основных конференций, симпозиумов и~т.\:п.
+
+{\contribution} Автор принимал активное участие \ldots
+
+\ifnumequal{\value{bibliosel}}{0}
+{%%% Встроенная реализация с загрузкой файла через движок bibtex8. (При желании, внутри можно использовать обычные ссылки, наподобие `\cite{vakbib1,vakbib2}`).
+    {\publications} Основные результаты по теме диссертации изложены в XX печатных изданиях,
+    X из которых изданы в журналах, рекомендованных ВАК,
+    X "--- в тезисах докладов.
+}%
+{%%% Реализация пакетом biblatex через движок biber
+    \begin{refsection}[bl-author]
+        % Это refsection=1.
+        % Процитированные здесь работы:
+        %  * подсчитываются, для автоматического составления фразы "Основные результаты ..."
+        %  * попадают в авторскую библиографию, при usefootcite==0 и стиле `\insertbiblioauthor` или `\insertbiblioauthorgrouped`
+        %  * нумеруются там в зависимости от порядка команд `\printbibliography` в этом разделе.
+        %  * при использовании `\insertbiblioauthorgrouped`, порядок команд `\printbibliography` в нём должен быть тем же (см. biblio/biblatex.tex)
+        %
+        % Невидимый библиографический список для подсчёта количества публикаций:
+        \printbibliography[heading=nobibheading, section=1, env=countauthorvak,          keyword=biblioauthorvak]%
+        \printbibliography[heading=nobibheading, section=1, env=countauthorwos,          keyword=biblioauthorwos]%
+        \printbibliography[heading=nobibheading, section=1, env=countauthorscopus,       keyword=biblioauthorscopus]%
+        \printbibliography[heading=nobibheading, section=1, env=countauthorconf,         keyword=biblioauthorconf]%
+        \printbibliography[heading=nobibheading, section=1, env=countauthorother,        keyword=biblioauthorother]%
+        \printbibliography[heading=nobibheading, section=1, env=countauthor,             keyword=biblioauthor]%
+        \printbibliography[heading=nobibheading, section=1, env=countauthorvakscopuswos, filter=vakscopuswos]%
+        \printbibliography[heading=nobibheading, section=1, env=countauthorscopuswos,    filter=scopuswos]%
+        %
+        \nocite{*}%
+        %
+        {\publications} Основные результаты по теме диссертации изложены в~\arabic{citeauthor}~печатных изданиях,
+        \arabic{citeauthorvak} из которых изданы в журналах, рекомендованных ВАК\sloppy%
+        \ifnum \value{citeauthorscopuswos}>0%
+            , \arabic{citeauthorscopuswos} "--- в~периодических научных журналах, индексируемых Web of~Science и Scopus\sloppy%
+        \fi%
+        \ifnum \value{citeauthorconf}>0%
+            , \arabic{citeauthorconf} "--- в~тезисах докладов.
+        \else%
+            .
+        \fi
+    \end{refsection}%
+    \begin{refsection}[bl-author]
+        % Это refsection=2.
+        % Процитированные здесь работы:
+        %  * попадают в авторскую библиографию, при usefootcite==0 и стиле `\insertbiblioauthorimportant`.
+        %  * ни на что не влияют в противном случае
+        \nocite{vakbib2}%vak
+        \nocite{bib1}%other
+        \nocite{confbib1}%conf
+    \end{refsection}%
+        %
+        % Всё, что вне этих двух refsection, это refsection=0,
+        %  * для диссертации - это нормальные ссылки, попадающие в обычную библиографию
+        %  * для автореферата:
+        %     * при usefootcite==0, ссылка корректно сработает только для источника из `external.bib`. Для своих работ --- напечатает "[0]" (и даже Warning не вылезет).
+        %     * при usefootcite==1, ссылка сработает нормально. В авторской библиографии будут только процитированные в refsection=0 работы.
+        %
+        % Невидимый библиографический список для подсчёта количества внешних публикаций
+        % Используется, чтобы убрать приставку "А" у работ автора, если в автореферате нет
+        % цитирований внешних источников.
+        % Замедляет компиляцию
+    \ifsynopsis
+    \ifnumequal{\value{draft}}{0}{
+      \printbibliography[heading=nobibheading, section=0, env=countexternal,          keyword=biblioexternal]%
+    }{}
+    \fi
+}
+
+При использовании пакета \verb!biblatex! будут подсчитаны все работы, добавленные
+в файл \verb!biblio/author.bib!. Для правильного подсчёта работ в~различных
+системах цитирования требуется использовать поля:
+\begin{itemize}
+        \item \texttt{authorvak} если публикация индексирована ВАК,
+        \item \texttt{authorscopus} если публикация индексирована Scopus,
+        \item \texttt{authorwos} если публикация индексирована Web of Science,
+        \item \texttt{authorconf} для докладов конференций,
+        \item \texttt{authorother} для других публикаций.
+\end{itemize}
+Для подсчёта используются счётчики:
+\begin{itemize}
+        \item \texttt{citeauthorvak} для работ, индексируемых ВАК,
+        \item \texttt{citeauthorscopus} для работ, индексируемых Scopus,
+        \item \texttt{citeauthorwos} для работ, индексируемых Web of Science,
+        \item \texttt{citeauthorvakscopuswos} для работ, индексируемых одной из трёх баз,
+        \item \texttt{citeauthorscopuswos} для работ, индексируемых Scopus или Web of~Science,
+        \item \texttt{citeauthorconf} для докладов на конференциях,
+        \item \texttt{citeauthorother} для остальных работ,
+        \item \texttt{citeauthor} для суммарного количества работ.
+\end{itemize}
+% Счётчик \texttt{citeexternal} используется для подсчёта процитированных публикаций.
+
+Для добавления в список публикаций автора работ, которые не были процитированы в
+автореферате требуется их~перечислить с использованием команды \verb!\nocite! в
+\verb!Synopsis/content.tex!.
